k8s/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    
    metadata:
      labels:
        app: backend
    spec:
      containers: 
      - name: backend
        image: shady203/vote-app-backend
        ports:
        - containerPort: 8088
